--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -14,10 +14,8 @@
       <h1>Level 3: Misfit in Tokyo</h1>
     </div>
 
-
-    <div class="bglevels">
-      <img id="bg" src="http://marketurbanism.com/wp-content/uploads/2014/07/Tokyo.jpg" height = 60% width = 60%></img>
-      <img id="android" src="images/Android1.png">
+    <div class="bglevel3">
+      <img id="android_level3" src="images/Android1.png">
     </div>
 
 
