--- a/finding-android1/templates/level4.html
+++ b/finding-android1/templates/level4.html
@@ -15,55 +15,12 @@
     </div>
 
 
-    <div class="bglevels">
-      <img id="bg" src="http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg"></img>
-      <img id="android" src="images/Android1.png">
+    <div class="bglevel4">
+      <img id="android_level4" src="images/Android1.png">
     </div>
 
       <form action="/level_5">
-      <button class = "next_level_button" onclick= >Next Level</button>
+      <button class = "next_level_button_4" onclick= >Next Level</button>
       </form>
-
-      <script>
-
-      $(document).ready(function(){
-        $(".next_level_button").hide()
-         $("#android").click(function(){
-           $("#android").height(200).width(200)
-          animateAndroid();
-          $(".next_level_button").fadeIn()
-
-         // window.location.href="level_2"
-     });
-     });
-     //  $(document).ready(function(){
-     //   //  $(".next_level_button").hide()
-     //      $("#android").click(function(){
-     //       $("#android").height(200).width(200)
-     //       animateAndroid();
-     //   //    $(".next_level_button").fadeIn()
-     //
-     //      window.location.href="level_2"
-     // });
-     // });
-     function makeNewPosition(){
-         // Get viewport dimensions (remove the dimension of the div)
-         var h = $(window).height() - 50;
-         var w = $(window).width() - 50;
-
-         var nh = Math.floor(Math.random() * h);
-         var nw = Math.floor(Math.random() * w);
-
-         return [nh,nw];
-     }
-     function animateAndroid(){
-         var newq = makeNewPosition();
-         $("#android").animate({ top: newq[0], left: newq[1] }, function(){
-           animateAndroid();
-         });
-         };
-
-
-         </script>
        </body>
      </html>
