Almost final version

--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -11,7 +11,7 @@
       <a href ="/">
       <img src="images/new_android_logo.jpg">
     </a>
-      <h1>Level 5: Escaping Technology</h1>
+      <h1>Level 5: Top Brands of the World</h1>
     </div>
 
     <div class="bglevel5">
