fixed center alignment

--- a/finding-android1/templates/level4.html
+++ b/finding-android1/templates/level4.html
@@ -20,7 +20,7 @@
     </div>
 
       <form action="/level_5">
-      <button class = "next_level_button_4" onclick= >Next Level</button>
+      <button class = "next_level_button" onclick= >Next Level</button>
       </form>
        </body>
      </html>
