--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -19,7 +19,7 @@
     </div>
 
     <form action="/best_scores">
-      <button class = "next_level_button_5" onclick=  >Next Level</button>
+      <button class = "next_level_button" onclick=  >Next Level</button>
     </form>
        </body>
      </html>
