--- a/finding-android1/templates/about_us.html
+++ b/finding-android1/templates/about_us.html
@@ -9,24 +9,29 @@
     <script src="scripts/javascript.js"></script>
   </head>
 
-  <body>
+  <body class = "aboutusbody">
     <div class="header">
       <a href ="/">
       <img src="images/new_android_logo.jpg">
     </a>
 
-      <h1>Who Are We?</h1>
+      <!-- <div class="bgaboutus">
+        <img id="android_glasses" src="http://androidgenes.com/wp-content/uploads/2012/02/android_glasses.jpg">
+      </div> -->
 
+      <h1>Who Are We?</h1>
       <h1> We are the Glasses Squad! </h1>
       <br>
-
   <h2> ARELY </h2>
   <p>  Hello everyone! My name is Arely and I'm from Aguascalientes, Mexico. I have lived in Chicago for most of my life. Next fall, I'll be attending Franklin and Marshall College in Pennsylvania, studying computer science. This summer in CSSI, I Worked alongside many unique Googlers and my two partners, Erin and Nathan, to create this wonderful game. It have been a great experience here at Google, but it doesn't end there for me. </p>
-
   <h2> ERIN </h2>
-  <p> </p>
-
+  <p> This is where Erin will tell us about her awesome self. </p>
   <h2> NATHAN </h2>
+  <p> This is where Nathan will tell us about her awesome self. </p>
+<br>
 
+  <img src="http://img.talkandroid.com/uploads/2012/05/droid-logo-pink.png"></img>
+  <img src="http://img.talkandroid.com/uploads/2012/05/droid-logo-pink.png"></img>
+  <img src="http://devlup.com/wp-content/uploads/2010/07/droid-logo-light-blue.png"></img>
   </body>
 </html>
