--- a/finding-android1/templates/congratulations.html
+++ b/finding-android1/templates/congratulations.html
@@ -9,22 +9,31 @@
     <script src="scripts/javascript.js"></script>
   </head>
 
-  <body>
-    <div class="header">
+  <body class="congratulationsbody">
+    <div>
       <a href ="/">
-      <img src="images/new_android_logo.jpg">
-    </a>
-      <h1>Congratulations!</h1>
-    </div>
+      <img id="android_logo" src="images/new_android_logo.jpg"></img>
+      </a>
 
+      <form action="/about_us">
+      <button class = "about_us">About the Creators</button>
+      </form>
+      <p><h1> Congratulations! You have passed all five levels! </h1><p>
+
+      <p><h1> Now can you catch all the androids from escaping? We stopped one for you! <h1><p>
+      </br>
+    </div>
     <div class="bgcongratulations">
-        <img id="hot_air_balloon" src="https://tracilee.files.wordpress.com/2011/10/dsc_0334_21.jpg">
+      <img id="lollipop" src="http://1.bp.blogspot.com/-U9MP8MVJfRc/VECiwuK8QmI/AAAAAAAAA1w/27T9dWOLdhg/s400/l_image.png "> </img>
+      <img id = "flying_android" src = "https://lh3.googleusercontent.com/-f3gI0qLSpxQ/AAAAAAAAAAI/AAAAAAAAAAA/d14Zmkk3LlQ/photo.jpg"> </img>
+      <img id="android_tornado" src="http://huchtel.com/wp-content/uploads/2014/05/android-3.png"></img>
+      <img id="android_videogame" src="http://www.mariogames.be/images/androidapkgame.png"></img>
+      <img id="android_superhero" src="http://www.reveldigital.com/Images/android-3.png"></img>
+      <img id="balloon_1" src="http://pngimg.com/upload/balloon_PNG574.png"></img>
+      <img id="balloon_2" src="http://images.clipartpanda.com/balloon-20clipart-Balloon-Clip-art-14.png"></img>
+      <img id="balloon_3" src="http://www.highexpectationsballoons.com/portals/13/balloon_stock_png_by_mysticmorning-d3kdoy9.png"></img>
+      <img id="android_dancing" src="http://i.imgur.com/tjq3Y16.png"></img>
+
     </div>
-
-    <form action="/about_us">
-    <button class = "about_us"> About the Creators</button>
-    </form>
-
-
   </body>
 </html>
