--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -17,12 +17,12 @@
       <h1>Level 1: Scattered Madness</h1>
     </div>
 
-    <div class="bglevel1">
+    <div id="bglevel1" class="bglevel1">
         <img id="android_level1" src="images/Android1.png">
     </div>
 
     <form action="/level_2">
-    <button class = "next_level_button">Next Level</button>
+      <button class = "next_level_button">Next Level</button>
     </form>
 
 
