--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -18,8 +18,8 @@
       <img id="android_level5" src="images/Android1.png">
     </div>
 
-    <form action="/best_scores">
-      <button class = "next_level_button" onclick=  >Next Level</button>
+    <form action="/congratulations">
+      <button class = "next_level_button">Congratulations!</button>
     </form>
        </body>
      </html>
