--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -68,39 +68,42 @@ p{
   width: 736px;
   height: 616px;
   margin: 0 auto;
-  background-image: url("http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg");
+  background-image: url("/images/level1.jpg");
   background-repeat: no-repeat;
 }
 .bglevel2{
   width: 1024px;
   height: 768px;
   margin: 0 auto;
-  background-image: url("https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg");
+  background-image: url("/images/level2.jpg");
   background-repeat: no-repeat;
 }
 .bglevel3{
   width: 1920px;
   height: 1080px;
   margin: 0 auto;
-  background-image: url("http://marketurbanism.com/wp-content/uploads/2014/07/Tokyo.jpg");
+  background-image: url("/images/level3.jpg");
   background-repeat: no-repeat;
 }
 .bglevel4{
   width: 2123px;
   height: 1000px;
   margin: 0 auto;
-  background-image: url("http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg");
+  background-image: url("/images/level4.jpg");
   background-repeat: no-repeat;
 }
 .bglevel5{
   width: 1280px;
   height: 1000px;
   margin: 0 auto;
-  background-image: url("http://arzoenterprises.com/new-site/wp-content/uploads/2014/07/3356624308_53fdd5dde3_o.jpg");
+  background-image: url("/images/level5.jpg");
   background-repeat: no-repeat;
 }
 .header{
   text-align: center;
+}
+.textbox{
+  margin: 0 auto;
 }
 body.welcomebody{
   font-family: 'Orbitron', Arial, sans-serif;
