--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -17,8 +17,8 @@
 
     <div id="play">
       <form method="post" action="/level_1">
-        <input type="text" name="user_first_name" placeholder="First Name">
-        <input type="text" name="user_last_name" placeholder="Last Name">
+        <input class="textbox" type="text" name="user_first_name" placeholder="First Name">
+        <input class="textbox" type="text" name="user_last_name" placeholder="Last Name">
         <button id="submit" type="submit" value="Submit" style="width: 200px; height: 60px"><h1>Play</h1></button>
       </form>
     </div>
