--- a/finding-android1/templates/congratulations.html
+++ b/finding-android1/templates/congratulations.html
@@ -16,14 +16,15 @@
       </a>
 
       <form action="/about_us">
-      <button class = "about_us">About the Creators</button>
+        <button class = "about_us">About the Creators</button>
       </form>
       <p><h1> Congratulations! You have passed all five levels! </h1><p>
 
       <p><h1> Now can you catch all the androids from escaping? We stopped one for you! <h1><p>
       </br>
+
     </div>
-    <div class="bgcongratulations">
+    <div class="congratulations_images">
       <img id="lollipop" src="http://1.bp.blogspot.com/-U9MP8MVJfRc/VECiwuK8QmI/AAAAAAAAA1w/27T9dWOLdhg/s400/l_image.png "> </img>
       <img id = "flying_android" src = "https://lh3.googleusercontent.com/-f3gI0qLSpxQ/AAAAAAAAAAI/AAAAAAAAAAA/d14Zmkk3LlQ/photo.jpg"> </img>
       <img id="android_tornado" src="http://huchtel.com/wp-content/uploads/2014/05/android-3.png"></img>
@@ -33,7 +34,14 @@
       <img id="balloon_2" src="http://images.clipartpanda.com/balloon-20clipart-Balloon-Clip-art-14.png"></img>
       <img id="balloon_3" src="http://www.highexpectationsballoons.com/portals/13/balloon_stock_png_by_mysticmorning-d3kdoy9.png"></img>
       <img id="android_dancing" src="http://i.imgur.com/tjq3Y16.png"></img>
-
     </div>
+
+    <div class = "congratulations_background">
+      <img id = "air_balloon" src = "https://tracilee.files.wordpress.com/2011/10/dsc_0334_21.jpg">
+    </div>
+
+    <form action ="/about_us">
+      <button class = "about_us"> About Us </button>
+    </form>
   </body>
 </html>
