--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -2,9 +2,20 @@
 h1{
   text-align: center;
   font-family: "Orbitron", Arial, serif;
+  color: red;
+  font-size: 100%;
+}
+h2{
+  text-align: center;
+  font-family: "Orbitron", Arial, serif;
+  color: black;
+  font-size: 100%;
 }
 p{
   text-align: center;
+  color: black;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 100%
 }
 #submit{
   display: block;
@@ -59,6 +70,83 @@ p{
   left: 658px;
   z-index:1;
 }
+#lollipop{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 250px;
+  left: 540px;
+  z-index:1;
+}
+
+#flying_android{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 450px;
+  left: 540px;
+  z-index:1;
+}
+
+#android_superhero{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 300px;
+  left: 300px;
+  z-index:1;
+}
+#android_tornado{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 200px;
+  left: 200px;
+  z-index:1;
+}
+#android_videogame{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 10px;
+  left: 10px;
+  z-index:1;
+}
+#balloon_1{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 500px;
+  left: 500px;
+  z-index:1;
+}
+#balloon_2{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 75px;
+  left: 75px;
+  z-index:1;
+}
+#balloon_3{
+  width: 50px;
+  height: 75x;
+  position:absolute;
+  top: 540px;
+  left: 540px;
+  z-index:1;
+}
+
+#android_dancing{
+  width: 50px;
+  height: 75px;
+  position:absolute;
+  top: 10px;
+  left: 20px;
+  z-index:1;
+}.about_us{
+  text-align: center;
+}
 .next_level_button{
   display: block;
   margin-left: auto;
@@ -99,6 +187,15 @@ p{
   background-image: url("/images/level5.jpg");
   background-repeat: no-repeat;
 }
+
+#air_balloon{
+  width:750px;
+  height:500px;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  z-index:0;
+}
+
 .header{
   text-align: center;
 }
