--- a/finding-android1/templates/congratulations.html
+++ b/finding-android1/templates/congratulations.html
@@ -10,14 +10,19 @@
   </head>
 
   <body class="congratulationsbody">
-    <div>
-      <a href ="/">
-      <img id="android_logo" src="images/new_android_logo.jpg"></img>
-      </a>
+    <div class="headerContent">
+      <a href="/"><img id="android_logo" src="images/new_android_logo.jpg"></a>
+      <div class="nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about_us">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="headerLine"></div>
 
-      <form action="/about_us">
-        <button class = "about_us">About the Creators</button>
-      </form>
+    <div>
       <p><h1> Congratulations! You have passed all five levels! </h1><p>
 
       <p><h1> Now can you catch all the androids from escaping? We stopped one for you! <h1><p>
@@ -40,8 +45,5 @@
       <img id = "air_balloon" src = "https://tracilee.files.wordpress.com/2011/10/dsc_0334_21.jpg">
     </div>
 
-    <form action ="/about_us">
-      <button class = "about_us"> About Us </button>
-    </form>
   </body>
 </html>
