--- a/finding-android1/templates/about_us.html
+++ b/finding-android1/templates/about_us.html
@@ -10,10 +10,17 @@
   </head>
 
   <body class = "aboutusbody">
-    <div class="header">
-      <a href ="/">
-      <img src="images/new_android_logo.jpg">
-    </a>
+    <div class="headerContent">
+      <a href="/"><img id="android_logo" src="images/new_android_logo.jpg"></a>
+      <div class="nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about_us">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="headerLine"></div>
 
       <!-- <div class="bgaboutus">
         <img id="android_glasses" src="http://androidgenes.com/wp-content/uploads/2012/02/android_glasses.jpg">
