--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -8,10 +8,19 @@
   </head>
 
   <body>
+    <div class="headerContent">
+      <a href="/"><img id="android_logo" src="images/new_android_logo.jpg"></a>
+      <div class="nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about_us">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="headerLine"></div>
+
     <div class="header">
-      <a href ="/">
-      <img src="images/new_android_logo.jpg">
-    </a>
       <h1>Level 2: Lost in Toy World</h1>
     </div>
 
