--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -7,10 +7,18 @@
     <script src="scripts/javascript.js"></script>
   </head>
   <body>
+    <div class="headerContent">
+      <a href="/"><img id="android_logo" src="images/new_android_logo.jpg"></a>
+      <div class="nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about_us">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="headerLine"></div>
     <div class="header">
-      <a href ="/">
-      <img src="images/new_android_logo.jpg">
-    </a>
       <h1>Level 5: Top Brands of the World</h1>
     </div>
 
