--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -7,8 +7,19 @@
   </head>
 
   <body class="welcomebody">
-    <div>
-      <img id="android_logo" src="images/new_android_logo.jpg">
+    <div class="headerContent">
+      <a href="/"><img id="android_logo" src="images/new_android_logo.jpg"></a>
+      <div class="nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about_us">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="headerLine"></div>
+
+    <div id="rules">
       <h1> Challenge:</h1>
       <p>Your task is to find the Android icon among the midst of randomness.</p>
       <p>If you advance to the next levels, you have the option to return home by simply clicking on the "Finding Android" logo.</p>
@@ -16,7 +27,7 @@
     </div>
 
     <div id="play">
-      <form method="post" action="/level_1">
+      <form class="form" method="post" action="/level_1">
         <input class="textbox" type="text" name="user_first_name" placeholder="First Name">
         <input class="textbox" type="text" name="user_last_name" placeholder="Last Name">
         <button id="submit" type="submit" value="Submit" style="width: 200px; height: 60px"><h1>Play</h1></button>
