--- a/finding-android1/templates/congratulations.html
+++ b/finding-android1/templates/congratulations.html
@@ -16,7 +16,6 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about_us">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -41,8 +40,8 @@
       <img id="android_dancing" src="http://i.imgur.com/tjq3Y16.png"></img>
     </div>
 
-    <div class = "congratulations_background">
-      <img id = "air_balloon" src = "https://tracilee.files.wordpress.com/2011/10/dsc_0334_21.jpg">
+    <div class="congratulations_background">
+      <img id="air_balloon" src="images/congratz.jpg">
     </div>
 
   </body>
