--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -13,7 +13,6 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about_us">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -25,6 +24,13 @@
     <div class="bglevel3">
       <img id="android_level3" src="images/Android1.png">
     </div>
+
+    <!-- <div class = "tokyo_background">
+      <img id = "tokyo" src = "/images/level3.jpg">
+    </div> -->
+
+
+
 
 
       <form action="/level_4">
