--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -22,7 +22,8 @@
     </div>
 
     <div class="bglevel3">
-      <img id="android_level3" src="images/Android1.png">
+      <img class="levelbg" src="images/level3.jpg"></img>
+      <img id="android_level3" src="images/Android1.png"></img>
     </div>
 
 
