--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -22,6 +22,7 @@
     </div>
 
     <div class="bglevel5">
+      <img class="levelbg" src="images/level5.jpg"></img>
       <img id="android_level5" src="images/Android1.png">
     </div>
 
