--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -26,6 +26,7 @@
     </div>
 
     <div id="bglevel1" class="bglevel1">
+        <!-- <img class="levelbg" src="images/level3.jpg"></img> -->
         <img id="android_level1" src="images/Android1.png">
     </div>
 
