--- a/finding-android1/templates/level4.html
+++ b/finding-android1/templates/level4.html
@@ -23,11 +23,12 @@
 
 
     <div class="bglevel4">
+      <img class="levelbg" src="images/level4.jpg"></img>
       <img id="android_level4" src="images/Android1.png">
     </div>
 
-      <form action="/level_5">
+    <form action="/level_5">
       <button class = "next_level_button" onclick= >Next Level</button>
-      </form>
-       </body>
-     </html>
+    </form>
+  </body>
+</html>
