--- a/finding-android1/templates/about_us.html
+++ b/finding-android1/templates/about_us.html
@@ -27,14 +27,16 @@
 
       <h1>Who Are We?</h1>
       <h1> We are the Glasses Squad! </h1>
+
+      <div class="us">
+      <h2> ARELY </h2>
+      <p>  Hello everyone! My name is Arely and I'm from Aguascalientes, Mexico. I have lived in Chicago for most of my life. Next fall, I'll be attending Franklin and Marshall College in Pennsylvania, studying computer science. This summer in CSSI, I Worked alongside many unique Googlers and my two partners, Erin and Nathan, to create this wonderful game. It have been a great experience here at Google, but it doesn't end there for me. </p>
+      <h2> ERIN </h2>
+      <p> Hi guys! My name is Erin Cao and I was born and raised around the Chinatown area of Chicago. I will be attending Illinois Tech next year to study engineering. I am super grateful to have worked on this amazing application with Nathan and Arely and will forever recall the amazing experience that CSSI has been while tackling future endeavors. CSSI has helped build my confidence and taught me many indispensable skills, especially in opportunities involving teamwork! ﻿</p>
+      <h2> NATHAN </h2>
+      <p>Hi everyone! I’m Nathan and I was born and raised in the city of Chicago. I graduated from Lincoln Park High School and will be attending University of Illinois at Urbana-Champaign in the fall. In my spare time, I like to play basketball, pc games (League of Legends and Hearthstone), watch movies/shows, go biking, and hang out with friends. I am also a fan of the Chicago Bulls and the Golden State Warriors. As for music, I listen to anything that is trending on Spotify and Pandora. I also like to keep up with new/current news about technology and the NBA. Last but not least, I have to say that attending Google CSSI this summer to learn more about computer science have been an extremely fun and valuable experience.</p>
+     </div>
       <br>
-  <h2> ARELY </h2>
-  <p>  Hello everyone! My name is Arely and I'm from Aguascalientes, Mexico. I have lived in Chicago for most of my life. Next fall, I'll be attending Franklin and Marshall College in Pennsylvania, studying computer science. This summer in CSSI, I Worked alongside many unique Googlers and my two partners, Erin and Nathan, to create this wonderful game. It have been a great experience here at Google, but it doesn't end there for me. </p>
-  <h2> ERIN </h2>
-  <p> This is where Erin will tell us about her awesome self. </p>
-  <h2> NATHAN </h2>
-  <p> This is where Nathan will tell us about her awesome self. </p>
-<br>
 
   <img src="http://img.talkandroid.com/uploads/2012/05/droid-logo-pink.png"></img>
   <img src="http://img.talkandroid.com/uploads/2012/05/droid-logo-pink.png"></img>
