--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <audio controls autoplay loop src = "music/mario.mp3"></audio>
     <div class="headerContent">
       <a href="/"><img id="android_logo" src="images/new_android_logo.jpg"></a>
       <div class="nav">
