--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -7,6 +7,7 @@
     <script src="scripts/javascript.js"></script>
   </head>
   <body>
+    <audio controls autoplay loop src = "music/level5.mp3"></audio>
     <div class="headerContent">
       <a href="/"><img id="android_logo" src="images/new_android_logo.jpg"></a>
       <div class="nav">
